--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha -R spec test/test-pages.js"
+    "test": "node /usr/local/lib/node_modules/.bin/mocha -R spec app/test/test-pages.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
